--- a/school/pom.xml
+++ b/school/pom.xml
@@ -3,4 +3,34 @@
   <groupId>com.examples</groupId>
   <artifactId>school</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+    <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <junit.version>5.7.0</junit.version>
+    <assertj.version>3.18.1</assertj.version>
+    <mockito.version>3.7.0</mockito.version>    
+  </properties>
+  
+  <dependencies>   
+    <dependency>
+    <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>  
 </project>
