--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,15 +30,15 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml') }}
         restore-keys: ${{ runner.os }}-m2-
-    - name: Build with Maven
-      run:  > 
-          mvn -f myproject/pom.xml 
+    - name: Build with maven
+        run:  > 
+          mvn -f school/pom.xml 
           clean verify ${{matrix.additional-maven-args }}
         env:
           COVERALLS_REPO_TOKEN: ${{ SECRETS.COVERALLS_TOKEN}}
       - name: Generate JUnit Report
         run: >
-          mvn -f myproject/pom.xml
+          mvn -f school/pom.xml
           surefire-report:report-only site:site -DgenerateReports=false
         if: ${{ failure() }}  
       - name: Archive JUnit Report
