--- a/.github/workflows/maven-mac.yml
+++ b/.github/workflows/maven-mac.yml
@@ -1,19 +1,22 @@
-name: Java CI with Maven
+name: Java CI with Maven and Docker in macOS
 
 on:
   push:
-  pull_request:
+  
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
+    name: Build in macOS
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Install Docker
+      uses: docker-practice/actions-setup-docker@master
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
