--- a/school/pom.xml
+++ b/school/pom.xml
@@ -13,7 +13,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.version>5.7.0</junit.version>
-    <assertj.version>3.18.1</assertj.version>
+    <assertj.version>3.17.1</assertj.version>
     <mockito.version>3.7.0</mockito.version>
     <mongo.driver.version>3.12.7</mongo.driver.version>
     <mongo.java.server.version>1.37.0</mongo.java.server.version>
@@ -47,7 +47,7 @@
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
+      <artifactId>assertj-swing-junit</artifactId>
       <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
